test-legacy/tests/compiler/from_to/to_failure_extension.txt
error: no known format for extension `.extension`
 --> tests/compiler/from_to/to_failure_extension.tql:5:12
  |
5 | to "failure.extension"
  |            ^^^^^^^^^^ 
  |
  = note: supported extensions for format deduction: `arrow`, `csv`, `feather`, `json`, `jsonl`, `ndjson`, `parquet`, `pcap`, `ssv`, `tsv`, `yaml`
  = note: supported extensions for compression deduction: `br`, `brotli`, `bz2`, `gz`, `gzip`, `lz4`, `zst`, `zstd`
  = hint: you can pass a pipeline to handle compression and format
  = docs: https://docs.tenzir.com/reference/operators/to
